--- a/src/main/webapp/html/list.html
+++ b/src/main/webapp/html/list.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-ui-monthpicker@1.0.3/jquery.ui.monthpicker.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/jquery-ui-monthpicker@1.0.3/external/qunit.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="/js/sample-data.js" charset="UTF-8"></script>
+    <!-- <script type="text/javascript" src="/js/sample-data.js" charset="UTF-8"></script> -->
     <script type="text/javascript" src="/js/tboard-common.js" charset="UTF-8"></script>
     <script type="text/javascript" src="/js/tboard-init.js" charset="UTF-8"></script>
     
