--- a/src/main/webapp/html/tboardDetail.html
+++ b/src/main/webapp/html/tboardDetail.html
@@ -164,6 +164,8 @@
         </div>
 
         
+        <button tyep="button" data-tboard-auth-type="basic.save" style="display: none;">수정</button>
+        <button type="button" data-tboard-auth-type="basic.delete" style="display: none;">삭제</button>
     </div>    
 
 </div>
