--- a/src/main/webapp/html/tboardList.html
+++ b/src/main/webapp/html/tboardList.html
@@ -166,10 +166,15 @@
 
 
     <div id="list1" class="search-default-area" data-tboard-id="searchDefaultArea" data-tboard-view-type="searchType1">
+        
 
     </div>
 
     <div id="list2" class="search-default-area" data-tboard-id="searchDefaultArea" data-tboard-view-type="searchType2">
 
     </div>
+
+
+    <button tyep="button" data-tboard-auth-type="basic.access" data-tboard-id="btnSearch" style="display: none;">조회</button>
+    <button tyep="button" data-tboard-auth-type="basic.save" data-tboard-id="btnSave" style="display: none;">등록</button>
 </div>
