--- a/src/main/webapp/html/tboard-write.html
+++ b/src/main/webapp/html/tboard-write.html
@@ -121,6 +121,30 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="tboard-row">
+            <div class="tboard-item" data-tboard-fld-type="write.defaultType2">
+                <span class="tboard-label">선택</span>
+                <div class="tboard-input">
+                    <select data-tboard-fld-id="category">
+                        <option value="option1">옵션 1</option>
+                        <option value="option2">옵션 2</option>
+                        <option value="option3">옵션 3</option>
+                    </select>
+                </div>
+                <div class="tboard-input">
+                    <select id="search-type" data-tboard-fld-id="searchOption">
+                        <option value="all">전체</option>
+                        <option value="title">제목</option>
+                        <option value="content">내용</option>
+                    </select>
+                    <input type="text" id="search-keyword" placeholder="검색어 입력" data-tboard-fld-id="searchKeyword">
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
 </div>
