--- a/src/main/webapp/html/list test.html
+++ b/src/main/webapp/html/list test.html
@@ -136,6 +136,105 @@
             grid-column: span 2; /* 이 아이템은 2개의 열을 차지 */
         }
 
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f7f7f7;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f7f7f7;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 60%;
+    margin: 50px auto;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+.comment-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+textarea {
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical;
+    width: 100%;
+}
+
+button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.comments-section {
+    margin-top: 30px;
+}
+
+.comments-section h2 {
+    color: #333;
+}
+
+.comment {
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+}
+
+.edit-btn {
+    margin-left: 10px;
+    padding: 5px;
+    background-color: #ffa500;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.edit-btn:hover {
+    background-color: #e68900;
+}
+
+.delete-btn {
+    margin-left: 10px;
+    padding: 5px;
+    background-color: #ff4d4d;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.delete-btn:hover {
+    background-color: #e63333;
+}
 
     </style>
 </head>
@@ -143,10 +242,29 @@
 
 
 <div class="bbs-root" data-tboard-id="tboard-root">
-
+    
 </div>
 
+<div class="" data-tboard-id="image">
+    
+</div>
 
+<div class="container">
+    <h1>댓글 등록</h1>
+
+    <!-- 댓글 입력 폼 -->
+    <div class="comment-form">
+        <textarea id="commentText" placeholder="댓글을 입력하세요..." rows="4"></textarea>
+    </div>
+
+    <!-- 댓글 목록 -->
+    <div class="comments-section">
+        <h2>댓글 목록</h2>
+        <div id="commentsList">
+            <!-- 등록된 댓글들이 여기에 추가됩니다 -->
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
