--- a/src/main/webapp/html/list test.html
+++ b/src/main/webapp/html/list test.html
@@ -240,6 +240,9 @@ button:hover {
 </head>
 <body>
 
+<div class="">
+    <button id="btnTest">test</button>
+</div>
 
 <div class="bbs-root" data-tboard-id="tboard-root">
     
